[spi:midi] take snapshot